# OpenCL-Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FindFreeImage.cmake  README.md  _readme.txt  cl2.hpp  clean.bat  imgui.ini  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters  template_readme.txt  tmpl84.00a_2013.sln  tmpl84.00a_2013.vcxproj  tmpl84.00a_2015.sln  tmpl84.00a_2015.vcxproj  tmpl84.00a_2015.vcxproj.filters  vcpkg.json
assets/3dmodels/plane/: plane.ecs  plane.mtl
assets/3dmodels/stanford/bunny/: bunny.ecs
assets/cl/: accumulate.cl  atomic.cl  bvh.cl  camera.cl  compaction.cl  cubemap.cl  direct_shading.cl  exposure.cl  gamma.cl  gen_color.cl  kernel.cl  kernel_data.cl  light.cl  material.cl  math.cl  pbr_brdf.cl  prefix_sum.cl  random.cl  rawshapes.cl  ray.cl  refract.cl  scene.cl  shading.cl  shading_helper.cl  shading_old.cl  shapes.cl  skydome.cl  stack.cl  texture.cl  tonemapping.cl  utils.cl
assets/cl/clRNG/: clRNG.clh  lfsr113.clh  mrg31k3p.clh  mrg32k3a.clh  philox432.clh
assets/cl/clRNG/private/: lfsr113.c.h  mrg31k3p.c.h  mrg32k3a.c.h  philox432.c.h
assets/cl/old_code/: direct_shading.cl  light_old.cl  shading_old.cl
assets/gl/: fs_tex.glsl
cmake/: FindFreeImage.cmake
enc_temp_folder/812e6e7a8afeb143b5d7b67b2d62e3f3/: sbvh.h
enc_temp_folder/c75c47c1a1e061677ed4214a01c744c/: sbvh.cpp
enc_temp_folder/d37457474ede28eb01171fb1762e1f6/: sbvh.cpp
include/glm/: glm.hpp
lib/SDL2-2.0.3/lib/x64/: SDL2.lib  SDL2main.lib
lib/SDL2-2.0.3/lib/x86/: SDL2main.lib
lib/assimp/Win32/: assimp-vc140-mt.lib
lib/clRNG/Win32/: clRNG.exp  clRNG.lib
src/: CMakeLists.txt  Texture.cpp  Texture.h  Timer.h  aabb.h  allocator_singletons.cpp  allocator_singletons.h  bak_hdrtexture.cpp  binned_bvh.cpp  binned_bvh.h  bvh.cpp  bvh.h  bvh_nodes.h  bvh_test.cpp  bvh_test.h  camera.cpp  camera.h  common.h  eastl_alloc.cpp  eastl_alloc.h  fast_binned_bvh.cpp  fix_variant.h  game.cpp  game.h  gloutput.cpp  gloutput.h  hdrtexture.cpp  hdrtexture.h  hdrtexture.h.bak  imesh.h  light.cpp  light.h  linear_allocator.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_sequence.cpp  mesh_sequence.h  (+32 more)
src/bvh/: CMakeLists.txt  aabb.cpp  aabb.h  binned_bvh.cpp  binned_bvh.h  bvh_allocator.cpp  bvh_allocator.h  bvh_build.cpp  bvh_build.h  bvh_nodes.h  bvh_object_split.cpp  bvh_object_split.h  bvh_spatial_split.cpp  bvh_spatial_split.h  bvh_test.cpp  bvh_test.h  fast_binned_bvh.cpp  fast_binned_bvh.h  refit_bvh.cpp  refit_bvh.h  sbvh.cpp  sbvh.h  top_bvh.cpp  top_bvh.h  top_bvh_build.cpp  top_bvh_build.h
src/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_sdl_gl3.cpp
src/model/: CMakeLists.txt  imesh.h  material.h  mesh.cpp  mesh.h  mesh_helpers.cpp  mesh_helpers.h  mesh_sequence.cpp  mesh_sequence.h
src/opencl/: CMakeLists.txt  cl_gl_includes.h  cl_helpers.cpp  cl_helpers.h  context.cpp  context.h  texture.cpp  texture.h
src/template/: CMakeLists.txt  cl.hpp  cl2.hpp  cl_gl_includes.h  cl_helpers.h  includes.h  surface.cpp  surface.h  template.cpp  template.h  template_bak.cpp  template_bak.h  threads.cpp  threads.h
src/ui/: CMakeLists.txt  game.h  gloutput.cpp  gloutput.h  main.cpp  window.cpp  window.h
windows/include/clRNG/: clRNG.version.h
windows/lib/SDL2/Win32/: SDL2.lib
